--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
 
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+
     /** dagger **/
     String daggerVersion = '2.14.1'
     compile "com.google.dagger:dagger:$daggerVersion"
