--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.joeca.kryptostats"
-        minSdkVersion 19
+        minSdkVersion 25
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -22,10 +22,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -33,16 +35,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-    implementation "android.arch.lifecycle:runtime:1.1.0"
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation 'android.arch.lifecycle:runtime:1.1.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
-
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
-
     /** dagger **/
     String daggerVersion = '2.14.1'
     compile "com.google.dagger:dagger:$daggerVersion"
@@ -50,26 +48,21 @@ dependencies {
     compile "com.google.dagger:dagger-android-support:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
-
-    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-
-//    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
-//    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-
-//    implementation "com.google.dagger:dagger:$daggerVersion"
-//    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
-//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-//    kapt "com.android.databinding:compiler:$plugin_version"
-//    provided 'org.glassfish:javax.annotation:10.0-b28'
-//    provided 'javax.annotation:jsr250-api:1.0'
-//    implementation 'javax.inject:javax.inject:1'
-
+    compile 'com.google.code.findbugs:jsr305:3.0.2'
+    //    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+    //    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    //    implementation "com.google.dagger:dagger:$daggerVersion"
+    //    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    //    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    //    kapt "com.android.databinding:compiler:$plugin_version"
+    //    provided 'org.glassfish:javax.annotation:10.0-b28'
+    //    provided 'javax.annotation:jsr250-api:1.0'
+    //    implementation 'javax.inject:javax.inject:1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile "com.squareup.retrofit2:converter-gson:2.3.0"
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
